// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the site page component matches the snapshot 1`] = `
.c7 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c6 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c6:hover,
.c6:focus {
  color: #fff;
}

.c6:hover,
.c6:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  background-repeat: no-repeat;
  background-image: url( angle-right.svg );
  background-position: right 16px center;
  background-size: 24px;
  padding-left: 16px;
  padding-right: 56px;
}

.c2 {
  font-weight: 700;
  font-size: 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1480px;
  height: 286px;
  background-color: #a4286a;
  background-image: url( http://placehold.it/1480x380 );
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  position: relative;
  margin: 0 auto;
  padding: 0 32px 24px;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #fff;
  font-weight: 300;
  margin: 0;
  min-height: 186px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  min-width: 0;
  text-align: center;
  padding-bottom: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  height: 100px;
}

.c10 {
  margin-top: 24px;
  background-color: #fff;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c11 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c12 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c8 {
  -webkit-animation: dHZYI 1.15s infinite;
  animation: dHZYI 1.15s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  width: 60px;
  height: 60px;
  margin: calc( 50% - 30px ) 0 0 calc( 50% - 30px );
  margin: calc( 50vh - 70px ) 0 0 calc( 50% - 30px );
}

@media screen and ( max-width:1355px ) {
  .c0 {
    padding: 0 24px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    height: auto;
    min-height: 144px;
    padding: 0 16px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    text-align: center;
  }
}

@media screen and ( max-width:800px ) {
  .c4 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c4:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

<div>
  <div
    className="c0"
  >
    <h1
      className="c1 c2"
    >
      yoast.com
    </h1>
    <div
      className="c3"
    >
      <a
        aria-label={null}
        className="c4 c5 c6"
        href="http://yoast.com/wp-admin"
        onClick={null}
        rel="noopener"
        target="_blank"
      >
        <span>
          Open WordPress admin 
          <span
            className="screen-reader-text c7"
          >
            <span>
              (Opens in a new browser tab)
            </span>
          </span>
        </span>
      </a>
    </div>
  </div>
  <svg
    className="c8 yoast-loader"
    id="Y__x2B__bg"
    version="1.1"
    viewBox="0 0 500 500"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="250"
          x2="250"
          y1="428.6121"
          y2="77.122"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#570732",
              }
            }
          />
          <stop
            offset="2.377558e-02"
            style={
              Object {
                "stopColor": "#5D0936",
              }
            }
          />
          <stop
            offset="0.1559"
            style={
              Object {
                "stopColor": "#771549",
              }
            }
          />
          <stop
            offset="0.3019"
            style={
              Object {
                "stopColor": "#8B1D58",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#992362",
              }
            }
          />
          <stop
            offset="0.6671"
            style={
              Object {
                "stopColor": "#A12768",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#A4286A",
              }
            }
          />
        </linearGradient>
        <path
          d="M454.7,428.6H118.4c-40.2,0-73.2-32.9-73.2-73.2V150.3c0-40.2,32.9-73.2,73.2-73.2h263.1 c40.2,0,73.2,32.9,73.2,73.2V428.6z"
          fill="url(#SVGID_1_)"
        />
      </g>
      <g>
        <g>
          <g>
            <g>
              <path
                d="M357.1,102.4l-43.8,9.4L239.9,277l-47.2-147.8h-70.2l78.6,201.9c6.7,17.2,6.7,36.3,0,53.5 c-6.7,17.2,45.1-84.1,24.7-75.7c0,0,34.9,97.6,36.4,94.5c7-14.3,13.7-30.3,20.2-48.5L387.4,72 C387.4,72,358.4,102.4,357.1,102.4z"
                fill="#A4286A"
              />
            </g>
          </g>
        </g>
      </g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="266.5665"
          x2="266.5665"
          y1="-6.9686"
          y2="378.4586"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#77B227",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#75B027",
              }
            }
          />
          <stop
            offset="0.635"
            style={
              Object {
                "stopColor": "#6EAB27",
              }
            }
          />
          <stop
            offset="0.7549"
            style={
              Object {
                "stopColor": "#63A027",
              }
            }
          />
          <stop
            offset="0.8518"
            style={
              Object {
                "stopColor": "#529228",
              }
            }
          />
          <stop
            offset="0.9339"
            style={
              Object {
                "stopColor": "#3C7F28",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#246B29",
              }
            }
          />
        </linearGradient>
        <path
          d="M337,6.1l-98.6,273.8l-47.2-147.8H121L199.6,334c6.7,17.2,6.7,36.3,0,53.5 c-8.8,22.5-23.4,41.8-59,46.6v59.9c69.4,0,106.9-42.6,140.3-136.1L412.1,6.1H337z"
          fill="url(#SVGID_2_)"
        />
        <path
          d="M140.6,500h-6.1v-71.4l5.3-0.7c34.8-4.7,46.9-24.2,54.1-42.7c6.2-15.8,6.2-33.2,0-49l-81.9-210.3h83.7 l43.1,134.9L332.7,0h88.3L286.7,359.9c-17.9,50-36.4,83.4-58.1,105.3C205,488.9,177,500,140.6,500z M146.7,439.2v48.3 c29.9-1.2,53.3-11.1,73.1-31.1c20.4-20.5,38-52.6,55.3-100.9L403.2,12.3h-61.9L238.1,299l-51.3-160.8H130l75.3,193.5 c7.3,18.7,7.3,39.2,0,57.9C197.7,409.3,184.1,432.4,146.7,439.2z"
          fill="#FFFFFF"
        />
      </g>
    </g>
  </svg>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <button
        aria-expanded={false}
        className="c11"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c12"
          fontSize={1.5}
        >
          Select the platform your site is running on
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <button
        aria-expanded={false}
        className="c11"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c12"
          fontSize={1.5}
        >
          Disconnect this site
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`the site page component matches the snapshot for a site in a directory 1`] = `
.c7 {
  -webkit-transform: translateY(1em);
  -ms-transform: translateY(1em);
  transform: translateY(1em);
}

.c6 {
  display: inline-block;
  height: 48px;
  padding: 12px 16px;
  background-color: #64a60a;
  color: #fff;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
  border-radius: 4px;
  vertical-align: top;
  font: 700 14px/24px "Open Sans",sans-serif;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  text-shadow: 0px 0px 2px #000;
  border-bottom: 4px solid rgba(0,0,0,0.2);
  -webkit-transition: background-color 150ms ease-out;
  transition: background-color 150ms ease-out;
}

.c6:hover,
.c6:focus {
  color: #fff;
}

.c6:hover,
.c6:focus {
  box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2),inset 0 0 0 100px rgba( 0,0,0,0.1 );
}

.c6:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c5 {
  background-repeat: no-repeat;
  background-image: url( angle-right.svg );
  background-position: right 16px center;
  background-size: 24px;
  padding-left: 16px;
  padding-right: 56px;
}

.c2 {
  font-weight: 700;
  font-size: 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1480px;
  height: 286px;
  background-color: #a4286a;
  background-image: url( http://placehold.it/1480x380 );
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  position: relative;
  margin: 0 auto;
  padding: 0 32px 24px;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #fff;
  font-weight: 300;
  margin: 0;
  min-height: 186px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  min-width: 0;
  text-align: center;
  padding-bottom: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  height: 100px;
}

.c10 {
  margin-top: 24px;
  background-color: #fff;
  width: 100%;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c11 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c12 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c8 {
  -webkit-animation: dHZYI 1.15s infinite;
  animation: dHZYI 1.15s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  width: 60px;
  height: 60px;
  margin: calc( 50% - 30px ) 0 0 calc( 50% - 30px );
  margin: calc( 50vh - 70px ) 0 0 calc( 50% - 30px );
}

@media screen and ( max-width:1355px ) {
  .c0 {
    padding: 0 24px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    height: auto;
    min-height: 144px;
    padding: 0 16px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    text-align: center;
  }
}

@media screen and ( max-width:800px ) {
  .c4 {
    min-width: 100%;
    margin-top: 1em;
    padding-right: 0;
    padding-left: 0;
  }

  .c4:first-child {
    margin-top: 0px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c11 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c11 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

<div>
  <div
    className="c0"
  >
    <h1
      className="c1 c2"
    >
      yoast.com/path/
    </h1>
    <div
      className="c3"
    >
      <a
        aria-label={null}
        className="c4 c5 c6"
        href="http://yoast.com/wp-admin"
        onClick={null}
        rel="noopener"
        target="_blank"
      >
        <span>
          Open WordPress admin 
          <span
            className="screen-reader-text c7"
          >
            <span>
              (Opens in a new browser tab)
            </span>
          </span>
        </span>
      </a>
    </div>
  </div>
  <svg
    className="c8 yoast-loader"
    id="Y__x2B__bg"
    version="1.1"
    viewBox="0 0 500 500"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="250"
          x2="250"
          y1="428.6121"
          y2="77.122"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#570732",
              }
            }
          />
          <stop
            offset="2.377558e-02"
            style={
              Object {
                "stopColor": "#5D0936",
              }
            }
          />
          <stop
            offset="0.1559"
            style={
              Object {
                "stopColor": "#771549",
              }
            }
          />
          <stop
            offset="0.3019"
            style={
              Object {
                "stopColor": "#8B1D58",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#992362",
              }
            }
          />
          <stop
            offset="0.6671"
            style={
              Object {
                "stopColor": "#A12768",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#A4286A",
              }
            }
          />
        </linearGradient>
        <path
          d="M454.7,428.6H118.4c-40.2,0-73.2-32.9-73.2-73.2V150.3c0-40.2,32.9-73.2,73.2-73.2h263.1 c40.2,0,73.2,32.9,73.2,73.2V428.6z"
          fill="url(#SVGID_1_)"
        />
      </g>
      <g>
        <g>
          <g>
            <g>
              <path
                d="M357.1,102.4l-43.8,9.4L239.9,277l-47.2-147.8h-70.2l78.6,201.9c6.7,17.2,6.7,36.3,0,53.5 c-6.7,17.2,45.1-84.1,24.7-75.7c0,0,34.9,97.6,36.4,94.5c7-14.3,13.7-30.3,20.2-48.5L387.4,72 C387.4,72,358.4,102.4,357.1,102.4z"
                fill="#A4286A"
              />
            </g>
          </g>
        </g>
      </g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="266.5665"
          x2="266.5665"
          y1="-6.9686"
          y2="378.4586"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#77B227",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#75B027",
              }
            }
          />
          <stop
            offset="0.635"
            style={
              Object {
                "stopColor": "#6EAB27",
              }
            }
          />
          <stop
            offset="0.7549"
            style={
              Object {
                "stopColor": "#63A027",
              }
            }
          />
          <stop
            offset="0.8518"
            style={
              Object {
                "stopColor": "#529228",
              }
            }
          />
          <stop
            offset="0.9339"
            style={
              Object {
                "stopColor": "#3C7F28",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#246B29",
              }
            }
          />
        </linearGradient>
        <path
          d="M337,6.1l-98.6,273.8l-47.2-147.8H121L199.6,334c6.7,17.2,6.7,36.3,0,53.5 c-8.8,22.5-23.4,41.8-59,46.6v59.9c69.4,0,106.9-42.6,140.3-136.1L412.1,6.1H337z"
          fill="url(#SVGID_2_)"
        />
        <path
          d="M140.6,500h-6.1v-71.4l5.3-0.7c34.8-4.7,46.9-24.2,54.1-42.7c6.2-15.8,6.2-33.2,0-49l-81.9-210.3h83.7 l43.1,134.9L332.7,0h88.3L286.7,359.9c-17.9,50-36.4,83.4-58.1,105.3C205,488.9,177,500,140.6,500z M146.7,439.2v48.3 c29.9-1.2,53.3-11.1,73.1-31.1c20.4-20.5,38-52.6,55.3-100.9L403.2,12.3h-61.9L238.1,299l-51.3-160.8H130l75.3,193.5 c7.3,18.7,7.3,39.2,0,57.9C197.7,409.3,184.1,432.4,146.7,439.2z"
          fill="#FFFFFF"
        />
      </g>
    </g>
  </svg>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <button
        aria-expanded={false}
        className="c11"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c12"
          fontSize={1.5}
        >
          Select the platform your site is running on
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c9"
  >
    <div
      className="c10"
    >
      <button
        aria-expanded={false}
        className="c11"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c12"
          fontSize={1.5}
        >
          Disconnect this site
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`the site page component matches the snapshot for a site on the TYPO3 platform 1`] = `
.c2 {
  font-weight: 700;
  font-size: 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1480px;
  height: 286px;
  background-color: #a4286a;
  background-image: url( http://placehold.it/1480x380 );
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  position: relative;
  margin: 0 auto;
  padding: 0 32px 24px;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #fff;
  font-weight: 300;
  margin: 0;
  min-height: 186px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  min-width: 0;
  text-align: center;
  padding-bottom: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  height: 100px;
}

.c6 {
  margin-top: 24px;
  background-color: #fff;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c7 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c8 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c4 {
  -webkit-animation: dHZYI 1.15s infinite;
  animation: dHZYI 1.15s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  width: 60px;
  height: 60px;
  margin: calc( 50% - 30px ) 0 0 calc( 50% - 30px );
  margin: calc( 50vh - 70px ) 0 0 calc( 50% - 30px );
}

@media screen and ( max-width:1355px ) {
  .c0 {
    padding: 0 24px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    height: auto;
    min-height: 144px;
    padding: 0 16px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    text-align: center;
  }
}

@media screen and ( max-width:1355px ) {
  .c7 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c7 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

<div>
  <div
    className="c0"
  >
    <h1
      className="c1 c2"
    >
      yoast.com
    </h1>
    <div
      className="c3"
    />
  </div>
  <svg
    className="c4 yoast-loader"
    id="Y__x2B__bg"
    version="1.1"
    viewBox="0 0 500 500"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="250"
          x2="250"
          y1="428.6121"
          y2="77.122"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#570732",
              }
            }
          />
          <stop
            offset="2.377558e-02"
            style={
              Object {
                "stopColor": "#5D0936",
              }
            }
          />
          <stop
            offset="0.1559"
            style={
              Object {
                "stopColor": "#771549",
              }
            }
          />
          <stop
            offset="0.3019"
            style={
              Object {
                "stopColor": "#8B1D58",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#992362",
              }
            }
          />
          <stop
            offset="0.6671"
            style={
              Object {
                "stopColor": "#A12768",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#A4286A",
              }
            }
          />
        </linearGradient>
        <path
          d="M454.7,428.6H118.4c-40.2,0-73.2-32.9-73.2-73.2V150.3c0-40.2,32.9-73.2,73.2-73.2h263.1 c40.2,0,73.2,32.9,73.2,73.2V428.6z"
          fill="url(#SVGID_1_)"
        />
      </g>
      <g>
        <g>
          <g>
            <g>
              <path
                d="M357.1,102.4l-43.8,9.4L239.9,277l-47.2-147.8h-70.2l78.6,201.9c6.7,17.2,6.7,36.3,0,53.5 c-6.7,17.2,45.1-84.1,24.7-75.7c0,0,34.9,97.6,36.4,94.5c7-14.3,13.7-30.3,20.2-48.5L387.4,72 C387.4,72,358.4,102.4,357.1,102.4z"
                fill="#A4286A"
              />
            </g>
          </g>
        </g>
      </g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="266.5665"
          x2="266.5665"
          y1="-6.9686"
          y2="378.4586"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#77B227",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#75B027",
              }
            }
          />
          <stop
            offset="0.635"
            style={
              Object {
                "stopColor": "#6EAB27",
              }
            }
          />
          <stop
            offset="0.7549"
            style={
              Object {
                "stopColor": "#63A027",
              }
            }
          />
          <stop
            offset="0.8518"
            style={
              Object {
                "stopColor": "#529228",
              }
            }
          />
          <stop
            offset="0.9339"
            style={
              Object {
                "stopColor": "#3C7F28",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#246B29",
              }
            }
          />
        </linearGradient>
        <path
          d="M337,6.1l-98.6,273.8l-47.2-147.8H121L199.6,334c6.7,17.2,6.7,36.3,0,53.5 c-8.8,22.5-23.4,41.8-59,46.6v59.9c69.4,0,106.9-42.6,140.3-136.1L412.1,6.1H337z"
          fill="url(#SVGID_2_)"
        />
        <path
          d="M140.6,500h-6.1v-71.4l5.3-0.7c34.8-4.7,46.9-24.2,54.1-42.7c6.2-15.8,6.2-33.2,0-49l-81.9-210.3h83.7 l43.1,134.9L332.7,0h88.3L286.7,359.9c-17.9,50-36.4,83.4-58.1,105.3C205,488.9,177,500,140.6,500z M146.7,439.2v48.3 c29.9-1.2,53.3-11.1,73.1-31.1c20.4-20.5,38-52.6,55.3-100.9L403.2,12.3h-61.9L238.1,299l-51.3-160.8H130l75.3,193.5 c7.3,18.7,7.3,39.2,0,57.9C197.7,409.3,184.1,432.4,146.7,439.2z"
          fill="#FFFFFF"
        />
      </g>
    </g>
  </svg>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        aria-expanded={false}
        className="c7"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c8"
          fontSize={1.5}
        >
          Select the platform your site is running on
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        aria-expanded={false}
        className="c7"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c8"
          fontSize={1.5}
        >
          Disconnect this site
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div />
  <div />
</div>
`;

exports[`the site page component matches the snapshot for a wordpress site and open download modal 1`] = `
.c2 {
  font-weight: 700;
  font-size: 2em;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 1480px;
  height: 286px;
  background-color: #a4286a;
  background-image: url( http://placehold.it/1480x380 );
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  position: relative;
  margin: 0 auto;
  padding: 0 32px 24px;
}

.c1 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  color: #fff;
  font-weight: 300;
  margin: 0;
  min-height: 186px;
  word-wrap: break-word;
  overflow-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  min-width: 0;
  text-align: center;
  padding-bottom: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
  height: 100px;
}

.c6 {
  margin-top: 24px;
  background-color: #fff;
  width: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  padding: 24px 32px;
  border: none;
  text-align: left;
  font-weight: 300;
  cursor: pointer;
  color: #000;
}

.c7 svg {
  -webkit-flex: 0 0 40px;
  -ms-flex: 0 0 40px;
  flex: 0 0 40px;
  margin-right: -10px;
  margin-left: 10px;
  margin-top: -4px;
  margin-bottom: -4px;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c8 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-size: 1.5em;
  line-height: 1.33333333;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5 {
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
}

.c4 {
  -webkit-animation: dHZYI 1.15s infinite;
  animation: dHZYI 1.15s infinite;
  -webkit-animation-direction: alternate;
  animation-direction: alternate;
  -webkit-animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  animation-timing-function: cubic-bezier(0.96,0.02,0.63,0.86);
  width: 60px;
  height: 60px;
  margin: calc( 50% - 30px ) 0 0 calc( 50% - 30px );
  margin: calc( 50vh - 70px ) 0 0 calc( 50% - 30px );
}

@media screen and ( max-width:1355px ) {
  .c0 {
    padding: 0 24px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c0 {
    height: auto;
    min-height: 144px;
    padding: 0 16px 16px;
  }
}

@media screen and ( max-width:800px ) {
  .c1 {
    text-align: center;
  }
}

@media screen and ( max-width:1355px ) {
  .c7 {
    padding: 16px 24px;
  }
}

@media screen and ( max-width:800px ) {
  .c7 {
    padding: 16px;
  }
}

@media screen and ( max-width:1355px ) {
  .c7 svg {
    margin-top: 4px;
    margin-bottom: 4px;
    margin-right: -2px;
  }
}

<div>
  <div
    className="c0"
  >
    <h1
      className="c1 c2"
    >
      yoast.com
    </h1>
    <div
      className="c3"
    />
  </div>
  <svg
    className="c4 yoast-loader"
    id="Y__x2B__bg"
    version="1.1"
    viewBox="0 0 500 500"
    x="0px"
    y="0px"
  >
    <g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_1_"
          x1="250"
          x2="250"
          y1="428.6121"
          y2="77.122"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#570732",
              }
            }
          />
          <stop
            offset="2.377558e-02"
            style={
              Object {
                "stopColor": "#5D0936",
              }
            }
          />
          <stop
            offset="0.1559"
            style={
              Object {
                "stopColor": "#771549",
              }
            }
          />
          <stop
            offset="0.3019"
            style={
              Object {
                "stopColor": "#8B1D58",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#992362",
              }
            }
          />
          <stop
            offset="0.6671"
            style={
              Object {
                "stopColor": "#A12768",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#A4286A",
              }
            }
          />
        </linearGradient>
        <path
          d="M454.7,428.6H118.4c-40.2,0-73.2-32.9-73.2-73.2V150.3c0-40.2,32.9-73.2,73.2-73.2h263.1 c40.2,0,73.2,32.9,73.2,73.2V428.6z"
          fill="url(#SVGID_1_)"
        />
      </g>
      <g>
        <g>
          <g>
            <g>
              <path
                d="M357.1,102.4l-43.8,9.4L239.9,277l-47.2-147.8h-70.2l78.6,201.9c6.7,17.2,6.7,36.3,0,53.5 c-6.7,17.2,45.1-84.1,24.7-75.7c0,0,34.9,97.6,36.4,94.5c7-14.3,13.7-30.3,20.2-48.5L387.4,72 C387.4,72,358.4,102.4,357.1,102.4z"
                fill="#A4286A"
              />
            </g>
          </g>
        </g>
      </g>
      <g>
        <linearGradient
          gradientUnits="userSpaceOnUse"
          id="SVGID_2_"
          x1="266.5665"
          x2="266.5665"
          y1="-6.9686"
          y2="378.4586"
        >
          <stop
            offset="0"
            style={
              Object {
                "stopColor": "#77B227",
              }
            }
          />
          <stop
            offset="0.4669"
            style={
              Object {
                "stopColor": "#75B027",
              }
            }
          />
          <stop
            offset="0.635"
            style={
              Object {
                "stopColor": "#6EAB27",
              }
            }
          />
          <stop
            offset="0.7549"
            style={
              Object {
                "stopColor": "#63A027",
              }
            }
          />
          <stop
            offset="0.8518"
            style={
              Object {
                "stopColor": "#529228",
              }
            }
          />
          <stop
            offset="0.9339"
            style={
              Object {
                "stopColor": "#3C7F28",
              }
            }
          />
          <stop
            offset="1"
            style={
              Object {
                "stopColor": "#246B29",
              }
            }
          />
        </linearGradient>
        <path
          d="M337,6.1l-98.6,273.8l-47.2-147.8H121L199.6,334c6.7,17.2,6.7,36.3,0,53.5 c-8.8,22.5-23.4,41.8-59,46.6v59.9c69.4,0,106.9-42.6,140.3-136.1L412.1,6.1H337z"
          fill="url(#SVGID_2_)"
        />
        <path
          d="M140.6,500h-6.1v-71.4l5.3-0.7c34.8-4.7,46.9-24.2,54.1-42.7c6.2-15.8,6.2-33.2,0-49l-81.9-210.3h83.7 l43.1,134.9L332.7,0h88.3L286.7,359.9c-17.9,50-36.4,83.4-58.1,105.3C205,488.9,177,500,140.6,500z M146.7,439.2v48.3 c29.9-1.2,53.3-11.1,73.1-31.1c20.4-20.5,38-52.6,55.3-100.9L403.2,12.3h-61.9L238.1,299l-51.3-160.8H130l75.3,193.5 c7.3,18.7,7.3,39.2,0,57.9C197.7,409.3,184.1,432.4,146.7,439.2z"
          fill="#FFFFFF"
        />
      </g>
    </g>
  </svg>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        aria-expanded={false}
        className="c7"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c8"
          fontSize={1.5}
        >
          Select the platform your site is running on
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="c5"
  >
    <div
      className="c6"
    >
      <button
        aria-expanded={false}
        className="c7"
        fontWeight={300}
        onClick={[Function]}
      >
        <span
          className="c8"
          fontSize={1.5}
        >
          Disconnect this site
        </span>
        <svg
          aria-hidden="true"
          fill="#555"
          focusable="false"
          height={40}
          role="img"
          viewBox="0 0 24 24"
          width={40}
        >
          <path
            d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"
          />
        </svg>
      </button>
    </div>
  </div>
  <div />
  <div />
</div>
`;
